--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,169 @@
 #map {
-    height: 300px;
+    height: 1267px;
+    width: 70%;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    display: block;
+    z-index: 1;
+}
+
+body {
+    font-family: 'Noto Sans TC', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+    height: auto;
+    position: static;
+}
+
+/* 主要資料區 */
+
+.sideBar {
+    height: 2000px;
+    width: 30%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: block;
+    z-index: 3;
+}
+
+/* logo 區域 */
+
+.logoBox {
+    position: relative;
+    width: 90%;
+    height: 56px;
+    left: 5%;
+    top: 0px;
+    z-index: 4;
+
+    background: #ffffff;
+
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    border-radius: 0px 0px 9px 9px;
+}
+.logoBox-logo {
+    width: 48.12px;
+    height: 48px;
+    position: absolute;
+    left: 15%;
+    top: 5px;
+}
+
+.title1 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 125%;
+    display: flex;
+    align-items: flex-end;
+    color: #2d2d2d;
+    position: absolute;
+    left: 30%;
+    top: 10px;
+}
+
+.title2 {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+    display: flex;
+    align-items: flex-end;
+    color: #2d2d2d;
+    position: absolute;
+    left: 45%;
+    top: 25px;
+}
+/* 篩選區域 */
+.select-group {
+    font-style: 'Noto Sans TC';
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 20px;
+    left: 7%;
+    margin: auto 0;
+}
+
+.form-select-city {
+    align-items: center;
+    padding: 12px 16px;
+    position: relative;
+    width: 35%;
+    height: 48px;
+    background: #ffffff;
+    box-shadow: 0px 3px 8px rgba(75, 75, 75, 0.3);
+    border-radius: 27px;
+    border: 0px;
+}
+
+.form-select {
+    align-items: center;
+    padding: 12px 16px;
+
+    position: relative;
+    width: 45%;
+    height: 48px;
+    left: 5%;
+
+    background: #ffffff;
+    box-shadow: 0px 3px 8px rgba(75, 75, 75, 0.3);
+    border-radius: 27px;
+    border: 0px;
+}
+
+/* 右下定位按鈕 */
+
+#testClick {
+    position: absolute;
+    right: 5%;
+    bottom: 5%;
+    width: 64px;
+    height: 64px;
+    background: #686ffc;
+    box-shadow: 0px 2px 10px rgba(52, 57, 181, 0.36);
+    border-radius: 50px;
+    border: 0px;
+    z-index: 3;
+}
+
+.myMOUSE:hover {
+    cursor: pointer;
+}
+
+.fa-location-arrow {
+    color: white;
+}
+
+/* 點擊 marker 展開卡片 */
+
+.bike-card {
+    width: 200px;
+    height: 200px;
+}
+.card-title {
+    color: #686ffc;
+}
+
+.card-text {
+    font-size: 16px;
+}
+
+.fa-sign-out-alt {
+    color: #686ffc;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 20px;
+}
+.fa-sign-in-alt {
+    color: #686ffc;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 20px;
 }
