--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,11 +1,12 @@
 #map {
-    height: 1267px;
+    height: 2000px;
     width: 70%;
     position: absolute;
     top: 0px;
     right: 0px;
     display: block;
-    z-index: 1;
+    z-index: 0;
+    overflow-y: hidden;
 }
 
 body {
@@ -20,10 +21,17 @@ body {
     position: static;
 }
 
+
 /* 主要資料區 */
 
+.leaflet-control {
+    position: absolute;
+    left: 880px;
+    top: 10px;
+}
+
 .sideBar {
-    height: 2000px;
+    height: 1000px;
     width: 30%;
     position: absolute;
     top: 0px;
@@ -31,6 +39,7 @@ body {
     display: block;
     z-index: 3;
 }
+
 
 /* logo 區域 */
 
@@ -41,12 +50,11 @@ body {
     left: 5%;
     top: 0px;
     z-index: 4;
-
     background: #ffffff;
-
     box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
     border-radius: 0px 0px 9px 9px;
 }
+
 .logoBox-logo {
     width: 48.12px;
     height: 48px;
@@ -80,7 +88,10 @@ body {
     left: 45%;
     top: 25px;
 }
+
+
 /* 篩選區域 */
+
 .select-group {
     font-style: 'Noto Sans TC';
     display: flex;
@@ -106,17 +117,16 @@ body {
 .form-select {
     align-items: center;
     padding: 12px 16px;
-
     position: relative;
     width: 45%;
     height: 48px;
     left: 5%;
-
     background: #ffffff;
     box-shadow: 0px 3px 8px rgba(75, 75, 75, 0.3);
     border-radius: 27px;
     border: 0px;
 }
+
 
 /* 右下定位按鈕 */
 
@@ -141,18 +151,28 @@ body {
     color: white;
 }
 
+
 /* 點擊 marker 展開卡片 */
 
 .bike-card {
     width: 200px;
-    height: 200px;
+    height: 180px;
 }
+
 .card-title {
     color: #686ffc;
 }
 
 .card-text {
     font-size: 16px;
+    padding-top: 200px;
+}
+
+.bike-numbers {
+    font-size: 24px;
+    color: #686ffc;
+    padding-left: 50px;
+    padding-top: 50px;
 }
 
 .fa-sign-out-alt {
@@ -161,9 +181,164 @@ body {
     padding-top: 10px;
     font-size: 20px;
 }
+
 .fa-sign-in-alt {
     color: #686ffc;
     padding-right: 10px;
     padding-top: 10px;
     font-size: 20px;
+}
+
+
+/* 左側 route-card */
+
+.route-cards {
+    width: 80%;
+    position: absolute;
+    left: 30px;
+    top: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.route-card {
+    width: 100%;
+    height: 150px;
+    background: #eafbd3;
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    position: relative;
+    top: 20px;
+    padding: 12px;
+}
+
+.route-title {
+    position: absolute;
+    left: 25px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 140%;
+    color: #0d5706;
+}
+
+.route-length {
+    position: absolute;
+    left: 25px;
+    top: 50px;
+    color: #0d5706;
+    font-size: 16px;
+}
+
+.routeS2E {
+    width: 90%;
+    height: 60px;
+    background: #ffffff;
+    position: absolute;
+    bottom: 10px;
+    left: 20px;
+}
+
+.routeStart {
+    position: absolute;
+    bottom: 10px;
+    top: 10px;
+    left: 10px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+}
+
+.routeStartPlace {
+    font-size: 12px;
+}
+
+.routeEndPlace {
+    font-size: 12px;
+}
+
+.routeEnd {
+    position: absolute;
+    top: 10px;
+    left: 150px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+}
+
+
+/* 左側 station-card */
+
+.station-cards {
+    width: 80%;
+    position: absolute;
+    left: 30px;
+    top: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.station-card {
+    width: 100%;
+    height: 150px;
+    background: #e0e2fe;
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    position: relative;
+    top: 3px;
+    padding: 12px;
+    margin-top: 15px;
+}
+
+.station-title {
+    position: absolute;
+    left: 25px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 140%;
+    color: #131678;
+}
+
+.youbike {
+    position: absolute;
+    left: 25px;
+    top: 50px;
+    color: #131678;
+    font-size: 16px;
+}
+
+.stationBorrowText {
+    position: absolute;
+    bottom: 10px;
+    top: 10px;
+    left: 10px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+}
+
+.borrowNumbers {
+    font-size: 16px;
+    color: #131678;
+}
+
+.stationCapacityText {
+    position: absolute;
+    top: 10px;
+    left: 150px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+}
+
+.capacityNumbers {
+    font-size: 16px;
+    color: #131678;
 }
