--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,5 @@
 #map {
-    height: 2000px;
+    height: 1000px;
     width: 70%;
     position: absolute;
     top: 0px;
@@ -21,7 +21,6 @@ body {
     position: static;
 }
 
-
 /* 主要資料區 */
 
 .leaflet-control {
@@ -39,7 +38,6 @@ body {
     display: block;
     z-index: 3;
 }
-
 
 /* logo 區域 */
 
@@ -89,7 +87,6 @@ body {
     top: 25px;
 }
 
-
 /* 篩選區域 */
 
 .select-group {
@@ -127,7 +124,6 @@ body {
     border: 0px;
 }
 
-
 /* 右下定位按鈕 */
 
 #testClick {
@@ -151,12 +147,16 @@ body {
     color: white;
 }
 
-
 /* 點擊 marker 展開卡片 */
 
 .bike-card {
     width: 200px;
-    height: 180px;
+    height: 200px;
+}
+
+.card-subtitle {
+    margin: 0;
+    padding-top: 5px;
 }
 
 .card-title {
@@ -165,7 +165,7 @@ body {
 
 .card-text {
     font-size: 16px;
-    padding-top: 200px;
+    padding-top: 210px;
 }
 
 .bike-numbers {
@@ -189,13 +189,12 @@ body {
     font-size: 20px;
 }
 
-
 /* 左側 route-card */
 
 .route-cards {
     width: 80%;
     position: absolute;
-    left: 30px;
+    /* left: 35px; */
     top: 130px;
     display: flex;
     flex-direction: column;
@@ -210,7 +209,8 @@ body {
     border-radius: 9px;
     position: relative;
     top: 20px;
-    padding: 12px;
+    left: 15px;
+    padding-top: 20px;
 }
 
 .route-title {
@@ -229,6 +229,7 @@ body {
     top: 50px;
     color: #0d5706;
     font-size: 16px;
+    padding-top: 10px;
 }
 
 .routeS2E {
@@ -269,8 +270,22 @@ body {
     line-height: 140%;
 }
 
+.cyclingLength {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
 /* 左側 station-card */
+
+#cards-div {
+    width: 100%;
+    position: absolute;
+    left: 0px;
+    top: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 
 #station-cards {
     width: 80%;
@@ -282,14 +297,27 @@ body {
     align-items: flex-start;
 }
 
-#route-station-cards {
+#route-cards {
     width: 80%;
     position: absolute;
-    left: 280px;
-    top: 130px;
+    left: 30px;
+    top: 0px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+/* 
+.route-station-card {
+    width: 100%;
+    height: 150px;
+    background: #e0e2fe;
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    position: relative;
+    top: 3px;
+    padding: 12px;
+    margin-top: 15px;
 }
 
 .station-card {
@@ -312,14 +340,6 @@ body {
     font-size: 24px;
     line-height: 140%;
     color: #131678;
-}
-
-.youbike {
-    position: absolute;
-    left: 25px;
-    top: 50px;
-    color: #131678;
-    font-size: 16px;
 }
 
 .stationBorrowText {
@@ -351,4 +371,4 @@ body {
 .capacityNumbers {
     font-size: 16px;
     color: #131678;
-}
+} */
