--- a/src/style/main.css
+++ b/src/style/main.css
@@ -307,68 +307,95 @@ body {
     align-items: flex-start;
 }
 
-/* 
-.route-station-card {
-    width: 100%;
-    height: 150px;
-    background: #e0e2fe;
-    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
-    border-radius: 9px;
-    position: relative;
-    top: 3px;
-    padding: 12px;
-    margin-top: 15px;
-}
-
-.station-card {
-    width: 100%;
-    height: 150px;
-    background: #e0e2fe;
-    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
-    border-radius: 9px;
-    position: relative;
-    top: 3px;
-    padding: 12px;
-    margin-top: 15px;
-}
-
-.station-title {
+#food-cards {
+    width: 80%;
     position: absolute;
+    left: 30px;
+    top: 180px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#food-card {
+    width: 100%;
+    height: 300px;
+    background: #fff9cc;
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    position: relative;
+    top: 20px;
+    left: 15px;
+    margin-top: 20px;
+}
+
+.food-image {
+    width: 96%;
+    aspect-ratio: 370 / 162;
+    position: absolute;
+    left: 2%;
+    top: 0px;
+    border-radius: 9px;
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 1;
+    margin: 8px 0px;
+    object-fit: cover;
+}
+
+.food-title {
+    position: absolute;
+    top: 170px;
     left: 25px;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
     line-height: 140%;
-    color: #131678;
+    color: #f6a400;
 }
 
-.stationBorrowText {
+.food-adress {
     position: absolute;
-    bottom: 10px;
-    top: 10px;
-    left: 10px;
-    font-style: normal;
-    font-weight: normal;
+    left: 25px;
+    top: 200px;
     font-size: 14px;
-    line-height: 140%;
+    padding-top: 10px;
 }
 
-.borrowNumbers {
-    font-size: 16px;
-    color: #131678;
-}
-
-.stationCapacityText {
+.food-phone {
     position: absolute;
-    top: 10px;
-    left: 150px;
-    font-style: normal;
-    font-weight: normal;
+    left: 25px;
+    top: 230px;
     font-size: 14px;
-    line-height: 140%;
+    padding-top: 10px;
 }
 
-.capacityNumbers {
+.food-openTime {
+    position: absolute;
+    left: 25px;
+    top: 260px;
+    font-size: 14px;
+    padding-top: 10px;
+}
+
+.fa-map-pin {
+    margin-left: 5px;
+    color: #f6a400;
     font-size: 16px;
-    color: #131678;
-} */
+}
+.fa-map-pin:hover {
+    font-size: 22px;
+    color: #f68300;
+}
+
+.fa-phone {
+    margin-left: 5px;
+    font-size: 14px;
+    color: #f6a400;
+}
+
+.fa-phone:hover {
+    font-size: 20px;
+    color: #f68300;
+}
