--- a/src/style/main.css
+++ b/src/style/main.css
@@ -9,6 +9,19 @@
     overflow-y: hidden;
 }
 
+@media screen and (max-width: 480px) {
+    #map {
+        height: 1000px;
+        width: 100%;
+        position: fixed;
+        top: -120px;
+        right: 0px;
+        display: block;
+        z-index: 0;
+        overflow-y: hidden;
+    }
+}
+
 body {
     font-family: 'Noto Sans TC', sans-serif;
     margin: 0;
@@ -39,6 +52,18 @@ body {
     z-index: 3;
 }
 
+@media screen and (max-width: 480px) {
+    .sideBar {
+        height: 1000px;
+        width: 100%;
+        position: absolute;
+        top: 10px;
+        left: 0px;
+        display: block;
+        z-index: 3;
+    }
+}
+
 /* logo 區域 */
 
 .logoBox {
@@ -51,6 +76,21 @@ body {
     background: #ffffff;
     box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
     border-radius: 0px 0px 9px 9px;
+    margin: auto 0;
+}
+
+@media screen and (max-width: 480px) {
+    .logoBox {
+        position: fixed;
+        width: 100%;
+        height: 70px;
+        left: 0px;
+        top: 0px;
+        z-index: 4;
+        background: #ffffff;
+        box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+        border-radius: 0px;
+    }
 }
 
 .logoBox-logo {
@@ -59,6 +99,16 @@ body {
     position: absolute;
     left: 15%;
     top: 5px;
+}
+
+@media screen and (max-width: 480px) {
+    .logoBox-logo {
+        width: 48.12px;
+        height: 48px;
+        position: absolute;
+        left: 10%;
+        top: 10px;
+    }
 }
 
 .title1 {
@@ -74,6 +124,21 @@ body {
     top: 10px;
 }
 
+@media screen and (max-width: 480px) {
+    .title1 {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 28px;
+        line-height: 125%;
+        display: flex;
+        align-items: flex-end;
+        color: #2d2d2d;
+        position: absolute;
+        left: 25%;
+        top: 15px;
+    }
+}
+
 .title2 {
     font-style: normal;
     font-weight: normal;
@@ -85,6 +150,21 @@ body {
     position: absolute;
     left: 48%;
     top: 25px;
+}
+
+@media screen and (max-width: 480px) {
+    .title2 {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 140%;
+        display: flex;
+        align-items: flex-end;
+        color: #2d2d2d;
+        position: absolute;
+        left: 42%;
+        top: 25px;
+    }
 }
 
 /* 篩選區域 */
@@ -138,6 +218,21 @@ body {
     border: 0px;
     z-index: 3;
     position: fixed;
+}
+
+@media screen and (max-width: 480px) {
+    #testClick {
+        position: fixed;
+        right: 10%;
+        bottom: 10%;
+        width: 50px;
+        height: 50px;
+        background: #686ffc;
+        box-shadow: 0px 2px 10px rgba(52, 57, 181, 0.36);
+        border-radius: 50px;
+        border: 0px;
+        z-index: 3;
+    }
 }
 
 .myMOUSE:hover {
@@ -204,7 +299,6 @@ body {
 .route-cards {
     width: 80%;
     position: absolute;
-    /* left: 35px; */
     top: 130px;
     display: flex;
     flex-direction: column;
@@ -299,7 +393,19 @@ body {
     align-items: flex-start;
 }
 
-#station-cards {
+@media screen and (max-width: 480px) {
+    #cards-div {
+        width: 100%;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+/* #station-cards {
     width: 80%;
     position: absolute;
     left: 30px;
@@ -307,7 +413,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-}
+} */
 
 #route-cards {
     width: 80%;
@@ -418,8 +524,25 @@ body {
 /* 美食沙漠提醒 */
 
 #noFood {
-    font-size: 20px;
+    font-size: 18px;
     position: absolute;
     top: 220px;
     left: 10%;
+    color: #131678;
+}
+
+@media screen and (max-width: 480px) {
+    #noFood {
+        display: none;
+    }
+}
+
+.footer {
+    width: 30%;
+    position: fixed;
+    bottom: 0px;
+    background-color: #ffffff;
+    font-size: 12px;
+    color: #e0e2fe;
+    text-align: center;
 }
